--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,7 @@ jobs:
         DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
         DOCKER_REGISTRY_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
         OSSLSIGNCODE_VERSION: ${{ matrix.OSSLSIGNCODE_VERSION }}
+        TRIVY_GITHUB_TOKEN: ${{ github.token }}
       run: |
         if [ "$GITHUB_REF" == "refs/heads/main" ]; then
           export DOCKER_PUSH=1
