--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,28 +8,45 @@ name: Build
 
 on:
   push:
-    branches:
-    - '**'
-    tags-ignore:
+    branches-ignore:  # build all branches except:
+    - 'dependabot/**'  # prevent GHA triggered twice (once for commit to the branch and once for opening/syncing the PR)
+    tags-ignore:  # don't build tags
     - '**'
     paths-ignore:
     - '**/*.md'
+    - '.editorconfig'
+    - '.git*'
+    - '.github/*.yml'
+    - '.github/workflows/stale.yml'
+  pull_request:
+    paths-ignore:
+    - '**/*.md'
+    - '.editorconfig'
+    - '.git*'
+    - '.github/*.yml'
+    - '.github/workflows/stale.yml'
   schedule:
-    # https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows
-    - cron: '0 0 * * *'
+    # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
+    - cron: '0 17 * * 3'
   workflow_dispatch:
     # https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/
-
-env:
-  TRIVY_CACHE_DIR: ~/.trivy/cache
 
 defaults:
   run:
     shell: bash
 
+env:
+  DOCKER_IMAGE_REPO: ${{ github.repository_owner }}/osslsigncode
+  TRIVY_CACHE_DIR: ~/.trivy/cache
+
 jobs:
+
+  ###########################################################
   build:
-    runs-on: ubuntu-latest
+  ###########################################################
+
+    runs-on: ubuntu-latest  # https://github.com/actions/runner-images#available-images
+    timeout-minutes: 10
 
     strategy:
       matrix:
@@ -37,8 +54,33 @@ jobs:
         OSSLSIGNCODE_VERSION: [ "latest", "develop" ]
 
     steps:
+    - name: "Show: GitHub context"
+      env:
+        GITHUB_CONTEXT: ${{ toJSON(github) }}
+      run: echo $GITHUB_CONTEXT
+
+
+    - name: "Show: environment variables"
+      run: env | sort
+
+
     - name: Git Checkout
-      uses: actions/checkout@v4 #https://github.com/actions/checkout
+      uses: actions/checkout@v4  # https://github.com/actions/checkout
+
+
+    - name: Check Alpine Dockerfile
+      uses: hadolint/hadolint-action@v3.1.0
+      if: ${{ startsWith(matrix.DOCKER_BASE_IMAGE, 'alpine') }}
+      with:
+        dockerfile: image/alpine.Dockerfile
+
+
+    - name: Check Debian Dockerfile
+      uses: hadolint/hadolint-action@v3.1.0
+      if: ${{ startsWith(matrix.DOCKER_BASE_IMAGE, 'debian') }}
+      with:
+        dockerfile: image/debian.Dockerfile
+
 
     - name: Cache trivy cache
       uses: actions/cache@v4
@@ -49,23 +91,70 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-trivy-
 
+
     - name: Configure fast APT repository mirror
       uses: vegardit/fast-apt-mirror.sh@v1
+
 
     - name: Install dos2unix
       run: sudo apt-get install --no-install-recommends -y dos2unix
 
-    - name: Build docker image
+
+    - name: "Determine if docker images shall be published"
+      run: |
+        # ACT -> https://nektosact.com/usage/index.html#skipping-steps
+        set -x
+        if [[ $GITHUB_REF_NAME == 'main' && $GITHUB_EVENT_NAME != 'pull_request' && -z "$ACT" ]]; then
+          echo "DOCKER_PUSH_GHCR=true" >> "$GITHUB_ENV"
+          if [[ -n "${{ secrets.DOCKER_HUB_USERNAME }}" ]]; then
+            echo "DOCKER_PUSH=true" >> "$GITHUB_ENV"
+          fi
+        fi
+
+
+    - name: Install regclient
+      if: ${{ env.DOCKER_PUSH_GHCR }}
+      uses: iarekylew00t/regctl-installer@v3
+
+
+    - name: Login to docker.io
+      if: ${{ env.DOCKER_PUSH }}
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+
+    - name: Login to ghcr.io
+      if: ${{ env.DOCKER_PUSH_GHCR }}
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ github.token }}
+
+
+    - name: Build ${{ env.DOCKER_IMAGE_REPO }}:${{ matrix.OSSLSIGNCODE_VERSION }}
       env:
         DOCKER_BASE_IMAGE: ${{ matrix.DOCKER_BASE_IMAGE }}
-        DOCKER_REGISTRY: docker.io
-        DOCKER_REGISTRY_USERNAME: ${{ secrets.DOCKER_HUB_USERNAME }}
-        DOCKER_REGISTRY_TOKEN: ${{ secrets.DOCKER_HUB_TOKEN }}
         OSSLSIGNCODE_VERSION: ${{ matrix.OSSLSIGNCODE_VERSION }}
         TRIVY_GITHUB_TOKEN: ${{ github.token }}
-      run: |
-        if [[ $GITHUB_REF_NAME == "main" && $ACT != "true" ]]; then
-          export DOCKER_PUSH=1
-          echo "$DOCKER_REGISTRY_TOKEN" | docker login -u="$DOCKER_REGISTRY_USERNAME" "$DOCKER_REGISTRY" --password-stdin
-        fi
-        bash build-image.sh
+      run: bash build-image.sh
+
+
+    - name: Delete untagged images
+      uses: actions/github-script@v7
+      if: ${{ env.DOCKER_PUSH_GHCR }}
+      continue-on-error: true
+      with:
+        github-token: ${{ secrets.GHA_DELETE_PACKAGES }}
+        script: |
+          const imageName = /[^/]*$/.exec(process.env.DOCKER_IMAGE_REPO)[0]
+          const basePath = `/orgs/${{ github.repository_owner }}/packages/container/${imageName}/versions`
+          for (version of (await github.request(`GET ${basePath}`, { per_page: 100 })).data) {
+            if (version.metadata.container.tags.length == 0) {
+              console.log(`deleting ${version.name}...`)
+              const delResponse = await github.request(`DELETE ${basePath}/${version.id}`)
+              console.log(`status: ${delResponse.status}`)
+            }
+          }
