--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-ArtifactOfProjectHomePage: https://github.com/vegardit/docker-osslsigncode
 #
-# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions
+# https://docs.github.com/en/actions/writing-workflows/workflow-syntax-for-github-actions
 name: Build
 
 on:
@@ -26,10 +26,10 @@ on:
     - '.github/*.yml'
     - '.github/workflows/stale.yml'
   schedule:
-    # https://docs.github.com/en/actions/using-workflows/events-that-trigger-workflows
+    # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows
     - cron: '0 17 * * 3'
   workflow_dispatch:
-    # https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/
+    # https://docs.github.com/en/actions/writing-workflows/choosing-when-your-workflow-runs/events-that-trigger-workflows#workflow_dispatch
 
 defaults:
   run:
@@ -44,14 +44,15 @@ jobs:
   ###########################################################
   build:
   ###########################################################
-
     runs-on: ubuntu-latest  # https://github.com/actions/runner-images#available-images
     timeout-minutes: 10
 
     strategy:
       matrix:
-        DOCKER_BASE_IMAGE: [ "alpine:latest", "debian:stable-slim" ]
         OSSLSIGNCODE_VERSION: [ "latest", "develop" ]
+        DOCKER_BASE_IMAGE:
+        - ghcr.io/dockerhub-mirror/alpine:latest
+        - ghcr.io/dockerhub-mirror/debian:stable-slim
 
     steps:
     - name: "Show: GitHub context"
@@ -126,14 +127,14 @@ jobs:
       with:
         registry: ghcr.io
         username: ${{ github.actor }}
-        password: ${{ github.token }}
+        password: ${{ secrets.GITHUB_TOKEN }}
 
 
     - name: Build ${{ env.DOCKER_IMAGE_REPO }}:${{ matrix.OSSLSIGNCODE_VERSION }}
       env:
         DOCKER_BASE_IMAGE: ${{ matrix.DOCKER_BASE_IMAGE }}
         OSSLSIGNCODE_VERSION: ${{ matrix.OSSLSIGNCODE_VERSION }}
-        TRIVY_GITHUB_TOKEN: ${{ github.token }}
+        TRIVY_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: bash build-image.sh
 
 
