ci: run shellsheck

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,17 @@ jobs:
       uses: actions/checkout@v4  # https://github.com/actions/checkout
 
 
+    - name: Run the sh-checker
+      uses: luizm/action-sh-checker@master  # https://github.com/marketplace/actions/sh-checker
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SHFMT_OPTS: --simplify --keep-padding
+      with:
+         sh_checker_comment: true
+         sh_checker_checkbashisms_enable: true
+         sh_checker_shfmt_disable: true
+
+
     - name: Check Alpine Dockerfile
       uses: hadolint/hadolint-action@v3.1.0
       if: ${{ startsWith(matrix.DOCKER_BASE_IMAGE, 'alpine') }}
