--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
     strategy:
       matrix:
         OSSLSIGNCODE_VERSION: [ "latest", "develop" ]
-        DOCKER_BASE_IMAGE: [ alpine:latest, "debian:stable-slim" ]
+        DOCKER_BASE_IMAGE: [ alpine:3, "debian:stable-slim" ]
 
     steps:
     - name: "Show: GitHub context"
